tests/toy/neg/001579_mutation.toylang
program a = { while a . sleep; } .
